--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href = "/" />      <!-- adds / in front of any relative URLs (need to run server proxy configuration) -->
     <title>frontend</title>
   </head>
   <body>
